Build docs for 2.4.0

--- a/_modules/datasift/client.html
+++ b/_modules/datasift/client.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>datasift.client &mdash; datasift 2.2.1 documentation</title>
+    <title>datasift.client &mdash; datasift 2.4.0 documentation</title>
     
     <link rel="stylesheet" href="../../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '2.2.1',
+        VERSION:     '2.4.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
-    <link rel="top" title="datasift 2.2.1 documentation" href="../../index.html" />
+    <link rel="top" title="datasift 2.4.0 documentation" href="../../index.html" />
     <link rel="up" title="Module code" href="../index.html" /> 
   </head>
   <body>
@@ -36,7 +36,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">datasift 2.2.1 documentation</a> &raquo;</li>
+        <li><a href="../../index.html">datasift 2.4.0 documentation</a> &raquo;</li>
           <li><a href="../index.html" accesskey="U">Module code</a> &raquo;</li> 
       </ul>
     </div>  
@@ -54,8 +54,8 @@
 <span class="kn">from</span> <span class="nn">twisted.internet</span> <span class="kn">import</span> <span class="n">reactor</span>
 <span class="kn">from</span> <span class="nn">autobahn.twisted.websocket</span> <span class="kn">import</span> <span class="n">WebSocketClientFactory</span><span class="p">,</span> <span class="n">connectWS</span>
 
-<span class="kn">from</span> <span class="nn">datasift</span> <span class="kn">import</span> <span class="n">USER_AGENT</span><span class="p">,</span> <span class="n">WEBSOCKET_HOST</span>
-<span class="kn">from</span> <span class="nn">datasift.request</span> <span class="kn">import</span> <span class="n">PartialRequest</span><span class="p">,</span> <span class="n">DatasiftAuth</span>
+<span class="kn">from</span> <span class="nn">datasift</span> <span class="kn">import</span> <span class="n">USER_AGENT</span><span class="p">,</span> <span class="n">WEBSOCKET_HOST</span><span class="p">,</span> <span class="n">INGESTION_HOST</span>
+<span class="kn">from</span> <span class="nn">datasift.request</span> <span class="kn">import</span> <span class="n">PartialRequest</span><span class="p">,</span> <span class="n">DatasiftAuth</span><span class="p">,</span> <span class="n">IngestRequest</span>
 <span class="kn">from</span> <span class="nn">datasift.exceptions</span> <span class="kn">import</span> <span class="n">DeleteRequired</span><span class="p">,</span> <span class="n">StreamSubscriberNotStarted</span><span class="p">,</span> <span class="n">StreamNotConnected</span><span class="p">,</span> <span class="n">DataSiftApiException</span>
 <span class="kn">from</span> <span class="nn">datasift.output_mapper</span> <span class="kn">import</span> <span class="n">outputmapper</span>
 
@@ -69,6 +69,7 @@
 <span class="kn">from</span> <span class="nn">datasift.identity</span> <span class="kn">import</span> <span class="n">Identity</span>
 <span class="kn">from</span> <span class="nn">datasift.token</span> <span class="kn">import</span> <span class="n">Token</span>
 <span class="kn">from</span> <span class="nn">datasift.limit</span> <span class="kn">import</span> <span class="n">Limit</span>
+<span class="kn">from</span> <span class="nn">datasift.odp</span> <span class="kn">import</span> <span class="n">Odp</span>
 
 <span class="kn">from</span> <span class="nn">six.moves.urllib.parse</span> <span class="kn">import</span> <span class="n">urlencode</span>
 
@@ -128,6 +129,14 @@
             <span class="n">proxies</span><span class="o">=</span><span class="n">config</span><span class="o">.</span><span class="n">proxies</span><span class="p">,</span>
             <span class="n">timeout</span><span class="o">=</span><span class="n">config</span><span class="o">.</span><span class="n">timeout</span><span class="p">,</span>
             <span class="n">verify</span><span class="o">=</span><span class="n">config</span><span class="o">.</span><span class="n">verify</span><span class="p">)</span>
+
+        <span class="bp">self</span><span class="o">.</span><span class="n">ingest_request</span> <span class="o">=</span> <span class="n">IngestRequest</span><span class="p">(</span>
+            <span class="n">DatasiftAuth</span><span class="p">(</span><span class="n">config</span><span class="o">.</span><span class="n">user</span><span class="p">,</span> <span class="n">config</span><span class="o">.</span><span class="n">key</span><span class="p">),</span>
+            <span class="n">ssl</span><span class="o">=</span><span class="bp">True</span><span class="p">,</span>
+            <span class="n">proxies</span><span class="o">=</span><span class="n">config</span><span class="o">.</span><span class="n">proxies</span><span class="p">,</span>
+            <span class="n">timeout</span><span class="o">=</span><span class="n">config</span><span class="o">.</span><span class="n">timeout</span><span class="p">,</span>
+            <span class="n">verify</span><span class="o">=</span><span class="n">config</span><span class="o">.</span><span class="n">verify</span><span class="p">)</span>
+
         <span class="bp">self</span><span class="o">.</span><span class="n">push</span> <span class="o">=</span> <span class="n">Push</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">historics</span> <span class="o">=</span> <span class="n">Historics</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">historics_preview</span> <span class="o">=</span> <span class="n">HistoricsPreview</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="p">)</span>
@@ -138,6 +147,8 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">account</span><span class="o">.</span><span class="n">identity</span> <span class="o">=</span> <span class="n">Identity</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">account</span><span class="o">.</span><span class="n">identity</span><span class="o">.</span><span class="n">token</span> <span class="o">=</span> <span class="n">Token</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">account</span><span class="o">.</span><span class="n">identity</span><span class="o">.</span><span class="n">limit</span> <span class="o">=</span> <span class="n">Limit</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="p">)</span>
+
+        <span class="bp">self</span><span class="o">.</span><span class="n">odp</span> <span class="o">=</span> <span class="n">Odp</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">ingest_request</span><span class="p">)</span>
 
         <span class="c"># Initialize callbacks</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_on_delete</span> <span class="o">=</span> <span class="bp">None</span>
@@ -463,7 +474,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">datasift 2.2.1 documentation</a> &raquo;</li>
+        <li><a href="../../index.html">datasift 2.4.0 documentation</a> &raquo;</li>
           <li><a href="../index.html" >Module code</a> &raquo;</li> 
       </ul>
     </div>
