--- a/_modules/datasift/client.html
+++ b/_modules/datasift/client.html
@@ -73,6 +73,8 @@
 
 <span class="kn">from</span> <span class="nn">six.moves.urllib.parse</span> <span class="kn">import</span> <span class="n">urlencode</span>
 
+<span class="kn">import</span> <span class="nn">requests</span>
+
 
 <div class="viewcode-block" id="Client"><a class="viewcode-back" href="../../datasift.html#datasift.client.Client">[docs]</a><span class="k">class</span> <span class="nc">Client</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot; Datasift client class.</span>
@@ -97,6 +99,10 @@
 <span class="sd">        :type api_host: str</span>
 <span class="sd">        :param api_version: (optional) to change from the default DataSift version</span>
 <span class="sd">        :type api_version: str</span>
+<span class="sd">        :param async: (optional) specifies if this client should go into async mode, defaults to False</span>
+<span class="sd">        :type async: bool</span>
+<span class="sd">        :param max_workers: (optional) maximum number of worker threads to use while in async mode, defaults to 10</span>
+<span class="sd">        :type max_workers: int</span>
 
 <span class="sd">        :ivar push: instance of :class:`~datasift.push.Push`</span>
 <span class="sd">        :ivar historics: instance of :class:`~datasift.historics.Historics`</span>
@@ -106,7 +112,7 @@
 <span class="sd">   &quot;&quot;&quot;</span>
     <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
         <span class="k">class</span> <span class="nc">Config</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
-            <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">user</span><span class="p">,</span> <span class="n">apikey</span><span class="p">,</span> <span class="n">ssl</span><span class="o">=</span><span class="bp">True</span><span class="p">,</span> <span class="n">proxies</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span> <span class="n">timeout</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span> <span class="n">verify</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span> <span class="n">api_host</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span> <span class="n">api_version</span><span class="o">=</span><span class="bp">False</span><span class="p">):</span>
+            <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">user</span><span class="p">,</span> <span class="n">apikey</span><span class="p">,</span> <span class="n">ssl</span><span class="o">=</span><span class="bp">True</span><span class="p">,</span> <span class="n">proxies</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span> <span class="n">timeout</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span> <span class="n">verify</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span> <span class="n">api_host</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span> <span class="n">api_version</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span> <span class="n">async</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span> <span class="n">max_workers</span><span class="o">=</span><span class="mi">10</span><span class="p">):</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">user</span> <span class="o">=</span> <span class="n">user</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">key</span> <span class="o">=</span> <span class="n">apikey</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">ssl</span> <span class="o">=</span> <span class="n">ssl</span>
@@ -115,6 +121,8 @@
                 <span class="bp">self</span><span class="o">.</span><span class="n">verify</span> <span class="o">=</span> <span class="n">verify</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">api_host</span> <span class="o">=</span> <span class="n">api_host</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">api_version</span> <span class="o">=</span> <span class="n">api_version</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">async</span> <span class="o">=</span> <span class="n">async</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">max_workers</span> <span class="o">=</span> <span class="n">max_workers</span>
         <span class="n">config</span> <span class="o">=</span> <span class="n">Config</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">config</span> <span class="o">=</span> <span class="n">config</span>
 
@@ -123,12 +131,19 @@
         <span class="k">if</span> <span class="n">config</span><span class="o">.</span><span class="n">api_version</span><span class="p">:</span>
             <span class="n">PartialRequest</span><span class="o">.</span><span class="n">API_VERSION</span> <span class="o">=</span> <span class="n">config</span><span class="o">.</span><span class="n">api_version</span>
 
+        <span class="k">if</span> <span class="n">config</span><span class="o">.</span><span class="n">async</span><span class="p">:</span>
+            <span class="kn">from</span> <span class="nn">requests_futures.sessions</span> <span class="kn">import</span> <span class="n">FuturesSession</span>
+            <span class="n">session</span> <span class="o">=</span> <span class="n">FuturesSession</span><span class="p">(</span><span class="n">max_workers</span><span class="o">=</span><span class="n">config</span><span class="o">.</span><span class="n">max_workers</span><span class="p">)</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="n">session</span> <span class="o">=</span> <span class="n">requests</span><span class="o">.</span><span class="n">Session</span><span class="p">()</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">request</span> <span class="o">=</span> <span class="n">PartialRequest</span><span class="p">(</span>
             <span class="n">DatasiftAuth</span><span class="p">(</span><span class="n">config</span><span class="o">.</span><span class="n">user</span><span class="p">,</span> <span class="n">config</span><span class="o">.</span><span class="n">key</span><span class="p">),</span>
             <span class="n">ssl</span><span class="o">=</span><span class="n">config</span><span class="o">.</span><span class="n">ssl</span><span class="p">,</span>
             <span class="n">proxies</span><span class="o">=</span><span class="n">config</span><span class="o">.</span><span class="n">proxies</span><span class="p">,</span>
             <span class="n">timeout</span><span class="o">=</span><span class="n">config</span><span class="o">.</span><span class="n">timeout</span><span class="p">,</span>
-            <span class="n">verify</span><span class="o">=</span><span class="n">config</span><span class="o">.</span><span class="n">verify</span><span class="p">)</span>
+            <span class="n">verify</span><span class="o">=</span><span class="n">config</span><span class="o">.</span><span class="n">verify</span><span class="p">,</span>
+            <span class="n">session</span><span class="o">=</span><span class="n">session</span><span class="p">,</span>
+            <span class="n">async</span><span class="o">=</span><span class="n">config</span><span class="o">.</span><span class="n">async</span><span class="p">)</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">ingest_request</span> <span class="o">=</span> <span class="n">IngestRequest</span><span class="p">(</span>
             <span class="n">DatasiftAuth</span><span class="p">(</span><span class="n">config</span><span class="o">.</span><span class="n">user</span><span class="p">,</span> <span class="n">config</span><span class="o">.</span><span class="n">key</span><span class="p">),</span>
